# gk-opengl

./: CMakeLists.txt  CMakePresets.json
src/: Camera.h  InputHandler.cpp  InputHandler.h  Light.cpp  Light.h  ModelLoader.cpp  ModelLoader.h  Scene.cpp  Scene.h  Shader.h  ShaderManager.cpp  ShaderManager.h  Shape.cpp  Shape.h  cubeGenerator.h  main.cpp  sphereGenerator.h
src/shaders/: gbuffer.fs.glsl  gbuffer.vs.glsl  lighting_pass.fs.glsl  normal.fs.glsl  normal.vs.glsl  phong.fs.glsl  phong.vs.glsl
